# krepis-platform

./: .dependency-cruiser.js  .editorconfig  .gitignore  .prettierrc  CONTRIBUTING.md  README.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.ts
ci-cd-pipeline-not-yet/actions/setup/: action.yml
ci-cd-pipeline-not-yet/workflows/: ci.yml  release.yml  security.yml
docs/: README.md
docs/architecture/: Dual-Core-Runtime-Strategy.md
docs/architecture/auth/: README.md
docs/architecture/cache/: README.md
docs/architecture/config/: README.md
docs/architecture/core/: 001_Context_Propagation_Module_Spec.md  002_Dependency_Injection_Module_Spec.md  003_Unified_Pipeline_and_CQRS_Spec.md  004_Pure_Domain_Repository_Spec.md  005_UoW_Spec.md  006_Application_Bootstrapper_Spec.md  007_Domain_Event_Spec.md  008_Resilience_Policy_Spec.md  009_Specification_Pattern_Spec.md  010_Unified_Pipeline_and_Middleware_Spec.md
docs/consent_form/: Business_Asset_Protection_and_Nondisclosure_Agreement(NDA).md  Data_Learning_Opt-out_and_Privacy_Rights_Consent_Form.md  Enterprise-Dedicated_Cluster_Allocation_and_Operation_Agreement(SLA).md  Service_Use_and_Data_Use_Consent_Form.md
docs/dev/: 0_Hybrid_Monorepo_Strategy.md  1_Hybrid_Monorepo_Integration_Build_and_Pipeline_Strategy.md  2_Detailed_specifications_for_code_quaility_and_style_guards_by_language.md  3_Architecture_Guard_and_Test_Automation_Datail_Specification.md  README.md
docs/spec/: 001_The_Hybrid_Synergy.md  002_The_Hybrid_Connectivity.md  003_The_Intelligent_Govermence.md  004_The_Robust_Infrastructure.md  005_B_KRP_REVENUE-2025-001.md  005_The_Fair_Economy.md
native/: Cargo.toml
