# ============================================================================
# Krepis ADaaS Platform - Rust Native Modules Workspace
# ============================================================================
#
# 🎯 Purpose:
# Manages Rust-based high-performance native modules for the Krepis platform.
# These modules provide critical performance and security capabilities.
#
# 🏛️ ADaaS Vision Alignment:
# - KNUL Engine: Ultra-fast QUIC-based networking
# - Krepis-LZ: Semantic compression engine
# - Native Encryption: AES-GCM-256 at packet level
#
# ============================================================================

[workspace]
resolver = "2"
members = [
    # "crates/krepis-native",    # Napi-rs Node.js bindings
    # "crates/krepis-knul",      # KNUL networking engine
    # "crates/krepis-lz",        # Semantic compression
    # "crates/krepis-crypto",    # Cryptographic utilities
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/krepis/krepis"
homepage = "https://krepis.io"
authors = ["Krepis Team <team@krepis.io>"]

[workspace.dependencies]
# Napi-rs for Node.js bindings
napi = { version = "2", features = ["async", "napi8", "serde-json"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ring = "0.17"

# QUIC networking
quinn = "0.11"
rustls = "0.23"

# Compression
zstd = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
